# nanohft

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
scripts/: run_demo.sh
src/: main.cpp  mdfeed.cpp  mdfeed.hpp  metrics.cpp  metrics.hpp  ringbuf.hpp  risk.cpp  risk.hpp  router.cpp  router.hpp  strategy.cpp  strategy.hpp  util.cpp  util.hpp
tests/: test_determinism.cpp  test_ringbuf.cpp  test_risk.cpp
